# dx_rt

./: .bumpversion.cfg  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  ChangeLog.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_MATERIAL.md  RELEASE_NOTES_WITH_JIRA_NUM.md  bitmatch_test_dir.sh  build.cfg  build.sh  generate_README.sh  install.sh  mkdocs.yml  release.sh  sonar-project.properties
.github/scripts/: release_notes_updater.py
.github/workflows/: gh-cloud-create-tag-main.yml  gh-cloud-dispatch-submodule-update.yml  gh-cloud-merge-staging-to-main.yml  public-main.yml  release_notes_automation.yml
cli/: CMakeLists.txt  dxrt-cli-internal.cpp  dxrt-cli.cpp  dxrt_cli.cpp  dxrtd.cpp  multi_benchmark.cpp  parse_model.cpp  run_model.cpp
cli/dxtop/: dxtop.cpp
cmake/: dxrt.cfg.cmake  dxrt.clang.cmake  dxrt.function.cmake  toolchain.aarch64.cmake  toolchain.arm64.cmake  toolchain.riscv64.cmake  toolchain.x86_64.cmake
debian/: changelog  control  postinst  rules
docs/: API-Reference.md  Build.md  Examples.md  Getting-Started.md  High-Level-Design.md  How-To-Create-CMake-Project.md  Inference-Guide.md  Installation.md  Test.md  _Footer.md
docs/docs/: 04_Model_Inference.md  (+16 more)
driver/: build_l1.sh  common.sh  install_alveo_fpga.sh  install_m1.sh  module_insert_host.sh  pcie_rescan.sh  uninstall.sh
dx_rt/: CMakeLists.txt  install.sh  mkdocs.yml
dx_rt/lib/: CMakeLists.txt  cli.cpp  cpu_handle.cpp  datatype.cpp  device_version.cpp  driver.cpp  exception_handler.cpp  filesys_support.cpp  request.cpp  worker.cpp
dx_rt/lib/include/dxrt/: device_info_status.h  device_version.h  filesys_support.h  inference_engine.h  inference_option.h  memory.h
dx_rt/test/: CMakeLists.txt  buffer_test.cpp  circular_buffer_test.cpp  datatype_test.cpp  gtest.cpp  inference_engine_test.cpp  memory_test.cpp  ort_test.py  request_test.cpp  util_test.cpp
examples/: CMakeLists.txt
examples/cpp/check_versions/: check_versions.cpp
examples/cpp/display_async_models_1/: display_async_models_1.cpp
examples/cpp/display_async_models_2/: display_async_models_2.cpp
examples/cpp/display_async_pipe/: display_async_pipe.cpp  simple_circular_buffer_pool.h
examples/cpp/display_async_thread/: display_async_thread.cpp
examples/cpp/display_async_wait/: display_async_wait.cpp
examples/cpp/include/: logger.h
examples/cpp/multi_input_model_inference/: multi_input_model_inference.cpp
examples/cpp/run_async_model/: run_async_model.cpp
examples/cpp/run_async_model_bound/: run_async_model_bound.cpp
examples/cpp/run_async_model_conf/: run_async_model_conf.cpp
examples/cpp/run_async_model_output/: run_async_model_output.cpp
examples/cpp/run_async_model_profiler/: run_async_model_profiler.cpp
examples/cpp/run_async_model_thread/: run_async_model_thread.cpp
examples/cpp/run_async_model_wait/: run_async_model_wait.cpp
examples/cpp/run_batch_model/: run_batch_model.cpp
examples/cpp/run_sync_model/: run_sync_model.cpp
examples/cpp/run_sync_model_bound/: run_sync_model_bound.cpp
examples/cpp/run_sync_model_output/: run_sync_model_output.cpp  simple_circular_buffer_pool.h
examples/display_async_cb/: CMakeLists.txt  display_async_cb.cpp  simple_circular_data_pool.h
examples/display_async_models_1/: CMakeLists.txt  display_async_models_1.cpp
examples/display_async_models_2/: CMakeLists.txt  display_async_models_2.cpp
examples/display_async_pipe/: CMakeLists.txt  display_async_pipe.cpp
examples/display_async_thread/: CMakeLists.txt  display_async_thread.cpp
examples/display_async_wait/: CMakeLists.txt  display_async_wait.cpp
examples/multi_input_model_inference/: README_multi_input_model_inferenece.md
examples/python/: logger.py  multi_input_model_inference.py  run_async_model.py  run_async_model_callback.py  run_async_model_conf.py  run_async_model_profiler.py  run_async_model_thread.py  run_async_model_wait.py  run_batch_model.py  run_sync_model.py  run_sync_model_bound.py
examples/run_async_model/: CMakeLists.txt  concurrent_queue.h  run_async_model.cpp
examples/run_async_model_bound/: run_async_model_bound.cpp
examples/run_async_model_output/: CMakeLists.txt  run_async_model_output.cpp
examples/run_async_model_profiler/: run_async_model_profiler.cpp
examples/run_async_model_thread/: CMakeLists.txt  run_async_model_thread.cpp
examples/run_async_model_wait/: CMakeLists.txt  run_async_model_wait.cpp
examples/run_batch_model/: CMakeLists.txt  run_batch_model.cpp
examples/run_sync_model/: CMakeLists.txt  run_sync_model.cpp
examples/run_sync_model_bound/: CMakeLists.txt  run_sync_model_bound.cpp
examples/run_sync_model_output/: run_sync_model_output.cpp
html_docs/: 404.html  API-Reference.html  Build.html  Examples.html  Getting-Started.html  High-Level-Design.html  How-To-Create-CMake-Project.html  Inference-Guide.html  Installation.html  Introduction.html  Test.html  _Footer.html  index.html
lib/: CMakeLists.txt  buffer.cpp  circular_buffer.cpp  cli.cpp  configuration.cpp  cpu_handle.cpp  cpu_handle_worker.cpp  datatype.cpp  device.cpp  device_error_worker.cpp  device_event_worker.cpp  device_info_status.cpp  device_input_worker.cpp  device_output_worker.cpp  device_struct_operators.cpp  device_util.cpp  device_version.cpp  driver.cpp  exception_handler.cpp  filesys_support.cpp  fixed_size_buffer.cpp  fw.cpp  fwlog.cpp  inference_engine.cpp  inference_job.cpp  inference_option.cpp  inference_timer.cpp  memory.cpp  model.cpp  model_parser_factory.cpp  multiprocess_memory.cpp  npu_format_handler.cpp  npu_memory_cache.cpp  objects_pool.cpp  parse_model.cpp  profiler.cpp  request.cpp  request_response.cpp  service_util.cpp  task.cpp  (+5 more)
python_package/: README.md  pyproject.toml  setup.py
script/: run_model.sh
scripts/: install_python_and_venv.sh
service/: dxrt.service
test/: buffer_test.cpp  common.cpp  device_test.cpp  driver_test.cpp  exception_handler_test.cpp  general_test.cpp  inference_engine_test.cpp  inference_option_test.cpp  main.cpp  memory_test.cpp  ort_test.cpp  request_test.cpp  rmapinfo_test.cpp  task_test.cpp  tensor_test.cpp
(+691 files in other folders)
